# Semestr_4

./: README.md
Lab_3/: CMakeLists.txt  Doxyfile  README.md  results.txt
Lab_3/benchmarks/: benchmark.cpp
Lab_3/html/: _parallel_merge_sort_8cpp.html  _parallel_merge_sort_8hpp.html  _parallel_merge_sort_8hpp.js  _parallel_merge_sort_8hpp_source.html  _sequential_merge_sort_8cpp.html  _sequential_merge_sort_8hpp.html  _sequential_merge_sort_8hpp.js  _sequential_merge_sort_8hpp_source.html  _sorter_8hpp_source.html  benchmark_8cpp.js  class_sequential_merge_sort.html  classes.html  dir_13a41d9ad64fb9ae396cb953294783cf.html  dir_13a41d9ad64fb9ae396cb953294783cf.js  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_6d2c571a2aacb6ea63b02bd761e029ed.html  files_dup.js  functions.html  md__r_e_a_d_m_e.html  navtreedata.js
Lab_3/latex/: _parallel_merge_sort_8cpp.tex  _parallel_merge_sort_8hpp.tex  _parallel_merge_sort_8hpp_source.tex  _sequential_merge_sort_8cpp.tex  _sequential_merge_sort_8hpp.tex  _sequential_merge_sort_8hpp_source.tex  _sorter_8hpp.tex  _sorter_8hpp_source.tex  annotated.tex  benchmark_8cpp.tex  class_parallel_merge_sort.eps  class_parallel_merge_sort.tex  class_sequential_merge_sort.eps  class_sequential_merge_sort.tex  class_sorter.eps  class_sorter.tex  files.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex  struct_row.tex  test__sorters_8cpp.tex
Lab_3/sort/: ParallelMergeSort.cpp  ParallelMergeSort.hpp  SequentialMergeSort.cpp  SequentialMergeSort.hpp  Sorter.hpp
Lab_3/tests/: test_sorters.cpp
Project_2/: CMakeLists.txt  Doxyfile  README.md  api_handler.cpp  api_handler.h  cached_http.cpp  cached_http.h  config.h  http.cpp  http.h  i_http.h  main.cpp  profile_builder.cpp  profile_builder.h  provider_registry.h  report.cpp  report.h  server.cpp  server.h  steam_api.cpp  steam_api.h  types.h
Project_2/commands/: game_commands.cpp  game_commands.h  i_command.h
Project_2/html/: api__handler_8h.js  class_cached_http-members.html  class_cached_http.html  class_cached_http.js  class_http_server-members.html  classes.html  (+27 more)
(+225 files in other folders)
